[package]
name = "nostd-cursor"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Library that implements std::io::cursor in a nostd-environment."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["byteorder"]
byteorder = ["dep:byteorder"]

[dependencies]
byteorder = { version = "1.4", default-features = false, optional = true }